# spotify_popularity_prediction

./: README.md  pyproject.toml
app/: app.py
app/models/: default_model.pkl
app/service/: model.py
app/static/styles/: reset.css
app/templates/: artist_select.html  artist_test.html  base.html  change_model.html  home.html  platforms.html  predict_data_view.html
datasource/: spotify_most_streamed_songs.csv  spotify_predict.csv
model/: modelo_correto.csv  train.ipynb
