[project]
name = "spotify-popularity-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feature-engine>=1.8.2",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
]
